fix(comments): lower z-index of comment box to avoid appearing above the mentions list while editing a comment

--- a/app/client/stylesheets/components/pu-input-mentions.sass
+++ b/app/client/stylesheets/components/pu-input-mentions.sass
@@ -5,7 +5,7 @@
 
         > input, > textarea
             position: relative
-            z-index: 2
+            z-index: 0
 
     &-suggestions
         display: none
